--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>My Web Portfolio</title>
 </head>
 <body>
-Welcome to my Portfolio!
+<h1>Welcome to my Portfolio!</h1>
+
+Testing
 </body>
 </html>
