--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>My Web Portfolio</title>
 </head>
+    <title>Wordlwide Sunset</title>
 <body>
 <h1>Welcome to my Portfolio!</h1>
 
