--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Using header tag to put the logo Text-aalign center -->
     <header>
         <div class="logo1">
-          <img src="images/WebpageLogo.svg" width="100" height="115"/>
+          <img src="images/WebpageLogo.svg" width="100" height="115" alt=""/>
       </div>
     </header>
     <main>
@@ -25,7 +25,7 @@
          <!-- cover add text -->
         <section class="cover-code">
           <h1 class="title">WorldWide Sunset</h1>
-          <img class="cover-image" src="images/Cover.jpg"  />
+          <img class="cover-image" src="images/Cover.jpg"  alt=""/>
         </section>
         <!-- icons -->
         <section class="icons">
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="col1-3">
               <div class="aboutimagebox">
-                <img  src="images/About.jpg" />
+                <img  src="images/About.jpg" alt=""/>
               </div>
             </div>
             <div class="col2-3">
@@ -134,19 +134,19 @@
             </div>
             <div class="col">
               <div class="picture2">
-                <img class="image-responsissness" src="images/Pictures2.jpg" />
+                <img class="image-responsissness" src="images/Pictures2.jpg" alt=""/>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col">
               <div class="picture3">
-                <img class="image-responsissness" src="images/pictures3.jpg" />
+                <img class="image-responsissness" src="images/pictures3.jpg" alt=""/>
               </div>
             </div>
             <div class="col">
               <div class="picture4">
-                <img class="image-responsissness" src="images/pictures4.jpg" />
+                <img class="image-responsissness" src="images/pictures4.jpg" alt=""/>
               </div>
             </div>
           </div>
