--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="row">
             <div class="col">
               <div class="picture1">
-                <img class="image-responsissness" src="images/Pictures1.jpg" />
+                <img class="image-responsissness" src="images/Pictures1.jpg" alt=""/>
               </div>
             </div>
             <div class="col">
