--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
-</head>
-        <!-- meta tag used to store information about the page like font, charater
+<html lang="en">
+  <head>
+    <!-- meta tag used to store information about the page like font, charater
          to be used. The following line will allow the webpage to fit to the width 
          of the device from which it will be displayed-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,8 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
       rel="stylesheet"
     />
-<body>
-        <!-- Using header tag to put the logo Text-aalign center -->
+  </head>
+  <body>
+    <!-- Using header tag to put the logo Text-aalign center -->
     <header>
         <div class="logo1">
           <img src="images/WebpageLogo.svg" width="100" height="115" alt=""/>
@@ -25,7 +25,7 @@
          <!-- cover add text -->
         <section class="cover-code">
           <h1 class="title">WorldWide Sunset</h1>
-          <img class="cover-image" src="images/Cover.jpg"  alt=""/>
+          <img class="cover-image" src="images/Cover.jpg" alt=""/>
         </section>
         <!-- icons -->
         <section class="icons">
@@ -36,7 +36,7 @@
                   <img src="images/DownloadIcon.svg" width="75" height="75" />
                 </div>
                 
-                <h1>Download A Photo</h1>
+                <h2>Download A Photo</h2>
                 <div class="IconTextStyle">
                   <p>Click on the icon
                   if you wish to
@@ -49,7 +49,7 @@
                 <div class="iconspecs">
                   <img src="images/FileIcon.svg" width="75" height="75" />
                 </div>
-                <h1>Modify A Photo</h1>
+                <h2>Modify A Photo</h2>
                 <div class="IconTextStyle">
                   <p>Click on the icon
                   if you wish to
@@ -60,9 +60,9 @@
             <div class="col">
               <div class="iconbox">
                 <div class="iconspecs">
-                  <img src="images/UploadIcon.svg" width="75" height="75" />
+                  <img src="images/UploadIcon.svg" width="75" height="75" alt=""/>
                 </div>
-                <h1>Upload A Photo</h1>
+                <h2>Upload A Photo</h2>
                 <div class="IconTextStyle">
                   <p>Click on the icon
                   if you wish to
@@ -185,5 +185,5 @@
     <footer>
       <div class="webpage-fit"><p>&copy; WorldWide Sunset 2021</p></div>
     </footer>
-</body>
+  </body>
 </html>
