--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="col">
               <div class="iconbox">
                 <div class="iconspecs">
-                  <img src="images/DownloadIcon.svg" width="75" height="75" />
+                  <img src="images/DownloadIcon.svg" width="75" height="75" alt=""/>
                 </div>
                 
                 <h2>Download A Photo</h2>
@@ -47,7 +47,7 @@
             <div class="col">
               <div class="iconbox">
                 <div class="iconspecs">
-                  <img src="images/FileIcon.svg" width="75" height="75" />
+                  <img src="images/FileIcon.svg" width="75" height="75" alt=""/>
                 </div>
                 <h2>Modify A Photo</h2>
                 <div class="IconTextStyle">
